# bitski-common-rs

./: Cargo.toml  README.md  docker-compose.yaml  otel-collector-config.yaml
.github/: CODEOWNERS
.github/workflows/: rust.yaml
bitski-common/: Cargo.toml  README.md
bitski-common-macros/: Cargo.toml  README.md
bitski-common-macros/src/: lib.rs
bitski-common/examples/: actix_web.rs
bitski-common/src/: actix_web.rs  diesel.rs  env.rs  error.rs  lib.rs  task.rs  telemetry.rs
bitski-common/src/instrumentation/: mod.rs
bitski-common/src/tower/: mod.rs  span.rs
blockchain-transaction-types/: Cargo.toml  README.md
blockchain-transaction-types/src/: lib.rs
blockchain-transaction-types/src/models/: account.rs  coin_type.rs  error.rs  ethereum_message.rs  ethereum_transaction.rs  known_message_type.rs  known_meta_transaction_types.rs  known_transaction_type.rs  message.rs  mod.rs  transaction.rs  transaction_info.rs  wyvern.rs
blockchain-transaction-types/src/tests/: mod.rs  signing.rs  wyvern.rs
blockchain-transaction-types/src/tests/helpers/: signer.rs
eip-712/: Cargo.toml
eip-712/solidity_examples/: int.sol  uint.sol
eip-712/src/: hasher.rs  lib.rs  types.rs
eip712/: Cargo.toml  README.md
eip712/solidity_examples/: address.sol  array.sol  bool.sol  bytes.sol  dynamic.sol  reference.sol  struct.sol
eip712/src/: hasher.rs  lib.rs  types.rs
src/: lib.rs  prelude.rs
src/models/: account.rs  coin_type.rs  error.rs  ethereum_account.rs  ethereum_transaction.rs  known_transaction_type.rs  message.rs  mod.rs  transaction.rs  transaction_info.rs
src/tests/: signing.rs
src/tests/helpers/: mod.rs  signer.rs
