[package]
name = "blockchain-transaction-types"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rlp = "0.5"
serde_json = "1.0"
thiserror = "1.0"
web3 = { version = "0.17", default-features = false }

[dev-dependencies]
rand = "0.6"
secp256k1 = {version = "0.20", features = ["rand"]}

[features]
signing = ["web3/signing"]