[package]
name = "blockchain-transaction-types"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rlp = "0.5"
serde_json = "1.0"
solana-sdk = {version = "1.8", default-features = false, optional = true}
thiserror = "1.0"
tiny-keccak = {version = "2.0", default-features = false, optional = true}
web3 = { version = "0.17", default-features = false, optional = true }
secp256k1 = {version = "0.20", default-features = false, optional = true}

[dev-dependencies]
hex = "0.4"
rand = "0.6"
secp256k1 = {version = "0.20", features = ["rand"], default-features = false}

[features]
default = ["all-chains"]
all-chains = ["ethereum", "solana"]
ethereum = ["web3", "tiny-keccak", "secp256k1"]
solana = ["solana-sdk/full"]
signing = ["web3-signing"]
web3-signing = ["web3/signing"]
