[package]
name = "bitski-common-macros"
version = "0.1.0"
edition = "2021"
readme = "README.md"
repository = "https://github.com/BitskiCo/bitski-common-rs"
homepage = "https://github.com/BitskiCo/bitski-common-rs"
license = "Apache-2.0 OR MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[features]
default = []

doc = ["tracing-subscriber", "uuid"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
proc-macro2 = "1.0.39"
quote = "1.0.18"
syn = { version = "1.0.96", features = ["full"] }
tracing-subscriber = { version = "0.3.11", optional = true, features = [
    "env-filter",
] }
uuid = { version = "0.8.2", optional = true }
