[package]
name = "bitski-common"
version = "1.0.0"
edition = "2021"
readme = "README.md"
repository = "https://github.com/BitskiCo/bitski-common-rs"
homepage = "https://github.com/BitskiCo/bitski-common-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
diesel = ["dep:diesel"]
tower = ["dep:tower", "tower-http"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
anyhow = "1.0.57"
diesel = { version = "1.4.8", features = ["postgres", "r2d2"], optional = true }
dotenv = "0.15.0"
hyper = "0.14.18"
opentelemetry = { version = "0.17.0", features = ["rt-tokio-current-thread"] }
opentelemetry-otlp = { version = "0.10.0", features = ["metrics"] }
opentelemetry-semantic-conventions = "0.9.0"
opentelemetry-zipkin = "0.15.0"
tokio = { version = "1.18.0", features = ["rt"] }
tower = { version = "0.4.12", optional = true }
tower-http = { version = "0.3.1", features = [
    "compression-full",
    "sensitive-headers",
    "trace",
], optional = true }
tracing = "0.1.34"
tracing-opentelemetry = "0.17.2"
tracing-subscriber = { version = "0.3.11", features = ["env-filter"] }
uuid = { version = "1.0.0", features = ["v4"] }

[dev-dependencies]
bitski-common = { path = ".", features = ["tower"] }
tonic = "0.7.1"
tonic-health = "0.6.0"
