[package]
name = "bitski-common"
version = "1.0.0"
edition = "2021"
readme = "README.md"
repository = "https://github.com/BitskiCo/bitski-common-rs"
homepage = "https://github.com/BitskiCo/bitski-common-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = []

actix-web = ["dep:actix-web", "actix-web-opentelemetry", "http"]
diesel = ["async-trait", "dep:diesel", "diesel-tracing", "r2d2"]
test = []
tonic = ["dep:tonic", "tower"]
tower = ["dep:tower", "tower-http"]

[dependencies]
actix-web = { version = "4.0.1", optional = true }
actix-web-opentelemetry = { git = "https://github.com/BitskiCo/actix-web-opentelemetry", features = [
    "metrics",
], optional = true }
anyhow = "1.0.57"
async-trait = { version = "0.1.53", optional = true }
diesel = { version = "1.4.8", features = ["postgres", "r2d2"], optional = true }
diesel-tracing = { version = "0.1.5", features = ["postgres"], optional = true }
dotenv = "0.15.0"
http = { version = "0.2.7", optional = true }
hyper = "0.14.18"
opentelemetry = { version = "0.17.0", features = ["rt-tokio-current-thread"] }
opentelemetry-otlp = { version = "0.10.0", features = ["metrics"] }
opentelemetry-semantic-conventions = "0.9.0"
opentelemetry-zipkin = "0.15.0"
r2d2 = { version = "0.8.9", optional = true }
tokio = { version = "1.18.0", features = ["rt"] }
tonic = { version = "0.7.1", optional = true }
tower = { version = "0.4.12", optional = true }
tower-http = { version = "0.3.1", features = [
    "compression-full",
    "sensitive-headers",
    "trace",
], optional = true }
tracing = "0.1.34"
tracing-opentelemetry = "0.17.2"
tracing-subscriber = { version = "0.3.11", features = ["env-filter"] }
uuid = { version = "1.0.0", features = ["v4"] }

[dev-dependencies]
bitski-common = { path = ".", features = ["tower"] }
tonic-health = "0.6.0"
