[package]
name = "bitski-common"
version = "1.0.0"
edition = "2021"
readme = "README.md"
repository = "https://github.com/BitskiCo/bitski-common-rs"
homepage = "https://github.com/BitskiCo/bitski-common-rs"
license = "Apache-2.0 OR MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = []

actix = ["dep:actix"]
actix-web = ["dep:actix-web", "actix-web-opentelemetry", "http", "serde_json"]
awc = ["dep:awc"]
bcrypt = ["dep:bcrypt"]
diesel = ["async-trait", "dep:diesel", "r2d2"]
humantime = ["dep:humantime"]
lettre = ["dep:lettre", "lettre_email"]
oauth2 = ["dep:oauth2"]
postgres = ["diesel", "diesel/postgres"]
r2d2 = ["dep:r2d2"]
reqwest = ["dep:reqwest"]
test = []
tonic = ["dep:tonic", "tower"]
tower = ["dep:tower", "tower-http"]
validator = ["dep:validator"]

[dependencies]
actix = { version = "0.13.0", optional = true, default-features = false }
actix-web = { version = "4.0.1", optional = true }
actix-web-opentelemetry = { git = "https://github.com/BitskiCo/actix-web-opentelemetry", features = [
    "metrics",
], optional = true }
anyhow = "1.0.57"
async-trait = { version = "0.1.53", optional = true }
awc = { version = "3.0.0", default-features = false, optional = true }
bcrypt = { version = "0.13.0", default-features = false, features = [
    "std",
], optional = true }
bitski-common-macros = { path = "../bitski-common-macros" }
diesel = { version = "1.4.8", features = ["r2d2"], optional = true }
dotenv = "0.15.0"
http = { version = "0.2.7", optional = true }
humantime = { version = "2.1.0", optional = true }
hyper = "0.14.18"
lettre = { version = "0.9.6", optional = true }
lettre_email = { version = "0.9.4", optional = true }
oauth2 = { version = "4.2.0", optional = true, default-features = false, features = ["reqwest"] }
opentelemetry = { version = "0.17.0", features = ["rt-tokio-current-thread"] }
opentelemetry-otlp = { version = "0.10.0", features = ["metrics"] }
opentelemetry-semantic-conventions = "0.9.0"
opentelemetry-zipkin = "0.15.0"
r2d2 = { version = "0.8.9", optional = true }
reqwest = { version = "0.11.10", optional = true, default-features = false }
serde_json = { version = "1.0.81", optional = true }
tokio = { version = "1.18.0", features = ["rt"] }
tonic = { version = "0.7.1", optional = true }
tower = { version = "0.4.12", optional = true }
tower-http = { version = "0.3.1", features = [
    "compression-full",
    "sensitive-headers",
    "trace",
], optional = true }
tracing = "0.1.34"
tracing-opentelemetry = "0.17.2"
tracing-subscriber = { version = "0.3.11", features = ["env-filter"] }
uuid = { version = "0.8.2", features = ["v4"] }
validator = { version = "0.15.0", optional = true }

[dev-dependencies]
bitski-common = { path = ".", features = ["tonic", "tower"] }
tonic-health = "0.6.0"

[[example]]
name = "actix_web"
required-features = ["actix-web"]
