[package]
name = "blockchain-transaction-types"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitski-eip-712 = {path = "../eip-712", default-features = false, optional = true}
rlp = "0.5"
serde = "1.0"
serde_json = "1.0"
solana-sdk = {version = "1.8", default-features = false, optional = true}
thiserror = "1.0"
tiny-keccak = {version = "2.0", default-features = false, optional = true}
secp256k1 = {version = "0.20", default-features = false, optional = true}
bigdecimal = {version = "0.3", features = ["serde"]}
ethabi = {version = "16.0", default-features = false, features = ["full-serde"], optional = true}
lazy_static = {version = "1.4", default-features = false, optional = true}

# Use newer web3 crate for EIP-1552 support.
[dependencies.web3]
git = "https://github.com/tomusdrw/rust-web3"
rev = "2e2d1dfa906aa2dff6312b97d0d5ba804e9c8c6e"
default-features = false
optional = true

[dev-dependencies]
hex = "0.4"
rand = "0.6"
secp256k1 = {version = "0.20", features = ["rand"], default-features = false}
tokio = {version = "1.0", features = ["test-util", "macros"], default-features = false}

[features]
default = ["all-chains"]
all-chains = ["ethereum", "solana"]
ethereum = ["web3", "tiny-keccak", "secp256k1", "bitski-eip-712", "ethabi"]
solana = ["solana-sdk/full"]
signing = ["web3-signing"]
web3-signing = ["web3/signing"]
