[package]
name = "blockchain-transaction-types"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0 OR MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rlp = "0.5.1"
serde = "1.0.136"
serde_json = "1.0.79"
solana-sdk = { version = "1.10.10", default-features = false, optional = true }
thiserror = "1.0.30"
tiny-keccak = { version = "2.0.2", default-features = false, optional = true }
secp256k1 = { version = "0.21.3", default-features = false, optional = true }
web3 = { version = "0.18.0", default-features = false, optional = true }

[dev-dependencies]
hex = "0.4.3"
rand = "0.6.5"
secp256k1 = { version = "0.21.3", features = ["rand"], default-features = false }
tokio = { version = "1.17.0", features = [
    "test-util",
    "macros",
], default-features = false }

[features]
default = ["all-chains"]
all-chains = ["ethereum", "solana"]
ethereum = ["web3", "tiny-keccak", "secp256k1"]
solana = ["solana-sdk/full"]
signing = ["web3-signing"]
web3-signing = ["web3/signing"]
